--- a/animate.html
+++ b/animate.html
@@ -3,10 +3,10 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="../css/styles.css" type="text/css" rel="stylesheet">
-        <link href="../assets/animate.css" type="text/css" rel="stylesheet">
+        <link href="css/styles.css" type="text/css" rel="stylesheet">
+        <link href="assets/animate.css" type="text/css" rel="stylesheet">
         <script src="http://code.jquery.com/jquery-3.1.1.js"></script>
-        <script src="../js/questionTree.js"></script>
+        <script src="js/questionTree.js"></script>
     <title>jQuery questionTree.js Plugin Demo</title>
     <style>
     body { font-family:'Arial';}
