--- a/demo.html
+++ b/demo.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="../css/style.css" media="screen" />
-    <script type="text/javascript" src="../js/decision-tree.js"></script>
-    <script type="text/javascript" src="../js/controls.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
+    <script type="text/javascript" src="js/decision-tree.js"></script>
+    <script type="text/javascript" src="js/controls.js"></script>
 </head>
 <body onLoad="init()">
     
